--- a/style.css
+++ b/style.css
@@ -4,3 +4,53 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    font-family: "Inter", sans-serif;
+    box-sizing: border-box;
+}
+
+main {
+    width: 550px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #1F2937;
+    color: #ffffff;
+}
+
+header {
+    width: 100%;
+    background: #3A69D2;
+}
+
+header h1 {
+    margin: 59px 48px 9px;
+}
+
+header p {
+    margin: 0 0 51px;
+}
+
+.buttons-container {
+    width: 100%;
+    padding: 40px 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.button {
+    width: 143px;
+    height: 45px;
+    background: #D1D4F4;
+    border-radius: 7px;
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    color: #4A4E74;
+    cursor: pointer;
+}
+
+.buttons-container button:active {
+    border: 3px #3A69D2 solid;
+}
