--- a/style.css
+++ b/style.css
@@ -64,3 +64,52 @@ header p {
     font-size: 12px;
     color: #D5D4D8;
 }
+
+#items {
+    width: 100%;
+}
+
+#items div {
+    padding: 0 38px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 20px;
+    color: #F5F5F5;
+}
+
+#items p {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 20px;
+}
+
+#items span {
+    color: #918E9B;
+}
+
+#items li {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin-top: 24px;
+}
+
+#remove-btn {
+    background: none;
+    border: none;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 20px;
+    color: #D5D4D8;
+    margin-left: 10px;
+    align-items: center;
+    cursor: pointer;
+}
+
+hr {
+    width: 474px;
+    margin: 25px;
+    border-style: none;
+    border-top: 1px solid #C3C6DB;
+}
