--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@
 body {
     font-family: "Inter", sans-serif;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 main {
     width: 550px;
     height: 719px;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
